jsonpath-rust-impl/tests/rfc9535_compile_tests/basic/fails/06_name_shorthand_symbol.stderr
error: unexpected token
 --> tests/rfc9535_compile_tests/basic/fails/06_name_shorthand_symbol.rs:9:25
  |
9 |         json_query! ( $.& ),
  |                         ^
